--- a/app/src/main/res/layout/fragment_choose_parking_spot.xml
+++ b/app/src/main/res/layout/fragment_choose_parking_spot.xml
@@ -3,7 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="23dp">
+    android:paddingTop="4dp">
+
+    <View
+        android:id="@+id/bottom_fragment_sign"
+        android:layout_width="30dp"
+        android:layout_height="3dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/bottom_fragment_sign"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintEnd_toEndOf="@id/title"
+        app:layout_constraintBottom_toTopOf="@id/title" />
 
     <TextView
         android:id="@+id/title"
