--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="50dp"
-    tools:context=".ConfirmationActivity">
+    tools:context=".authorization.ConfirmationActivity">
 
     <TextView
         android:id="@+id/confirmation_text"
